assets/css/screen.css
/* ... */
#email-address {
    color: #007cff;
    border: 1px solid #007cff;
    padding: 0.4em 1em 0.35em 1em;
    border-radius: 10px;
    font-size: 1.1em;
    display: inline-block;
    text-decoration: none;
    box-shadow: none;
    transition: transform ease-in-out 0.1s;
}

#email-address:hover {
    transform: scale(1.04);
}

#triangle {
    border: solid #fff 1px;
    width: 100vw;
    height: 100vw;
    position: absolute;
    left: 75vw;
    top: 1vw;
    transform: rotate(60deg);
    -webkit-transform: rotate(60deg);
}

pre {
    font-size: 0.7em;
    line-height: 1.3em;
    margin-bottom: 1.7em !important;
}

sup:target {
    background-color: #ff17a6;
}

code {
    font-family: 'Fira Code', monospace;
    background: rgba(0, 0, 0, 0.1);
    padding: 0 0.3em;
    border-radius: 5px;
}

code.hljs {
    padding: 1em;
    border-radius: 5px;
}

#triangle.post {
    left: -33vw;
    top: 33vw;
    transform: rotate(40deg);
    -webkit-transform: rotate(40deg);
}

#cako-intro a {
    text-decoration: underline;
}

#cako-intro a:hover {
    color: #ff17a6
}

#cako-post-feed-outer {
    margin-top: 1em;
    padding: 0 15px;
}

@media (max-width: 850px) {
    #cako-post-feed-outer {
        margin-top: 0.25em;
    }
}

#cako-post-feed {
    padding: 0 0 2em;
}

#loading-posts {
    display: none;
    margin-bottom: 2em;
}

#loading-posts.error {
    color: red;
}

#cako-search-feed {
    padding: 1.1em 15px 3em;
    max-width: 750px;
    margin: 0 auto;
}

@media (max-width: 850px) {
    #cako-search-feed {
        padding: .25em 15px 3em;
    }
}

#cako-search-header {
    font-size: 3.5rem;
    font-weight: 600;
    margin-bottom: 0.8em;
}

#search-status {
    display: none;
    margin-bottom: 1em;
}

#search-status.error {
    color: red;
}

.cako-featured {
    border: 1px solid #000;
    padding: 1.3rem 1.4rem 1.6rem;
    border-radius: 7px;
    max-width: 750px;
    line-height: 1.6rem;
    margin: 0.8em -8px;
    transition: max-height 0.3s ease-in-out;
    overflow-x: hidden;
}

.post-full-content .cako-featured {
    max-width: 800px;
}

.cako-featured-date {
    font-size: 0.8em;
    font-weight: 400;
}

.cako-featured-header {
    color: #000;
    font-size: 1.9rem;
    font-weight: 500;
    line-height: 1.15;
    margin-bottom: 0.6em;
}

.cako-featured .cako-post {
    margin-top: 1em;
}

@media (max-width: 500px) {
    .cako-featured-header {
        font-size: 1.8rem;
    }

    .cako-featured .cako-post {
        font-size: 0.8em;
    }
}

.cako-featured>.cako-post:nth-of-type(2) {
    margin-top: 0;
}

.cako-post-link.blue .cako-post-date {
    color: #36daff;
}

.cako-post-link.yellow .cako-post-date {
    color: #d2a007;
}

.cako-post-link.red .cako-post-date {
    color: #f92f00;
}

.cako-post-link.green .cako-post-date {
    color: #07b059;
}

.cako-post-link.purple .cako-post-date {
    color: #d300ff;
}

.cako-post-link:focus {
    outline: none;
}

#cako-search-results>.cako-post:not(:nth-of-type(1)) {
    margin-top: 1.7em;
}

@media (max-width: 850px) {
    #cako-search-results>.cako-post:not(:nth-of-type(1)) {
        margin-top: 1.4em;
    }
}

#cako-search-results .cako-post-link:focus .cako-post-date,
.post-nav .cako-post-link:focus .cako-post-date,
.post-nav .cako-post-link:hover .cako-post-date {
    border-bottom: 1px solid #0070e6;
}

.cako-post {
    font-size: 14px;
}

#cako-post-feed>.cako-post:not(:nth-of-type(1)) {
    margin-top: 1.5em;
}

#cako-post-feed-outer .cako-post,
#cako-search-results .cako-post {
    padding-right: 24px;
    margin-right: 2px;
}

.cako-post-title {
    display: inline-block;
    line-height: 1em;
    position: relative;
    margin-bottom: 0.2em;
    font-size: 1.75em;
    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Ubuntu, Arial, sans-serif;
    font-weight: 500;
    color: #000;
}

.cako-post-date {
    font-weight: 500;
    word-spacing: -0.08em;
    font-size: 1em;
    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Ubuntu, Arial, sans-serif;
    color: #0070e6;
}

.cako-post-link {
    display: inline-block;
    position: relative;
}

.cako-post-link:hover {
    text-decoration: none;
}

.cako-post-link .spinner {
    margin-left: 18px;
    margin-top: 1px;
}

.cako-post-preview {
    margin-top: 0.2em;
}

.cako-post-preview span.match {
    font-weight: 600;
    color: #ee600b;
}

.post-nav-outer {
    width: 100%;
    padding: 0 0 42px;
}

@media (max-width: 850px) {
    .post-nav-outer {
        margin-top: auto;
        padding: 0 0 15px;
    }
}

.post-nav {
    display: flex;
    justify-content: space-between;
    align-items: flex-end;
}

.post-nav.inner {
    padding: 0 15px;
    align-items: start;
}

.post-nav .cako-post {
    flex: 1;
    max-width: 40%;
    margin: 0;
    padding: 0;
    font-size: 10px;
}

.post-nav .cako-post.right,
.post-nav .cako-post-link.right {
    text-align: right;
}

.post-nav .cako-post-link {
    max-width: 100%;
    transition: transform ease-in-out 0.1s;
}

.post-nav .cako-post-link:hover {
    transform: scale(1.04);
}

.post-nav .cako-post-link:focus .icon {
    background-color: #0070e6;
}

.post-nav .cako-post-title {
    font-size: 1.3em;
    margin-bottom: 0.5em;
    font-weight: 400;
    color: #111;
    text-overflow: ellipsis;
    white-space: nowrap;
    display: block;
    overflow: hidden;
}

.post-nav .cako-post-date {
    font-size: 1.1em;
    font-weight: 400;
}

.post-nav .cako-post-date-outer {
    line-height: 1em;
    margin-top: -0.1em;
}

.post-nav .icon {
    background-color: rgb(140, 140, 140);
    width: 1em;
    height: 1em;
    margin-top: 0.25em;
}

.post-nav .arrow-icon-back {
    margin-right: 2px;
}

.post-nav .arrow-icon-forward {
    margin-left: 2px;
}

.arrow-icon-back {
    -webkit-mask: url(/assets/chevron-forward-outline.svg) no-repeat center;
    mask: url(/assets/chevron-forward-outline.svg) no-repeat center;
    transform: rotate(180deg);
}
/* ... */

